Fixed Contact page horizontal overflow

--- a/assets/css/common/contact.css
+++ b/assets/css/common/contact.css
@@ -5,10 +5,12 @@
     align-items: center;
 }
 
+.socials,
 .contact-form form {
     max-width: 768px;
     min-width: 428px;
-    width: calc(var(--main-width)*.75);
+    /* width: calc(var(--main-width)*.75); */
+    width: 100%;
     transition: var(--transition-duration);
 }
 
@@ -97,8 +99,7 @@
     margin: 8px;
     margin-left: 0;
     margin-right: 0;
-    min-width: 15rem;
-    width: 10rem;
+    width: 15rem;
     align-self: center;
     padding: 6px;
     border-radius: calc(var(--radius)*.5) !important;
@@ -144,17 +145,13 @@
 
 .socials {
     display: flex;
-    min-width: 650px;
-    width: 50%;
     flex-direction: column;
-    margin: 10px;
-    padding: 10px;
-    justify-content: center;
     align-items: center;
-    align-content: center;
+    width: 100%;
 }
 
 .social-links {
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     text-align: center;
@@ -162,7 +159,7 @@
     align-items: center;
     align-content: center;
     gap: 12px;
-    margin: auto;
+    margin: 0;
 }
 
 .social-links .button {
@@ -170,18 +167,37 @@
     margin: 0;
 }
 
-@media only screen and (max-width: 468px) {
+@media only screen and (max-width: 380px) {
     .social-links {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr !important;
     }
+}
 
+@media only screen and (max-width: 468px) {
+
+    .socials,
     .contact-form form {
         min-width: 0;
+    }
+
+    .submit-button {
+        width: 100%;
+    }
+
+    .button a:hover {
+        transform: none;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    .social-links {
+        width: 100% !important;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .socials,
     .contact-form form {
         width: var(--main-width);
     }
+
 }
